# unitary-mnist

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/mnist/: __init__.py  app.py  models.py
backend/src/mnist/app/: __init__.py  session.py
backend/src/mnist/app/mnist_data/: __init__.py  constants.py  download.py  loader.py
backend/src/mnist/app/routes/: __init__.py  base.py  forty_two.py  game.py  mnist_images.py
backend/tests/: __init__.py  test_app.py
cline/: CLINE_CONTEXT.md  CLINE_CONTEXT.xml  task1_infrastructure.md  task2_user_sessions.md  task4_mnist_image_api.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/scripts/: generate_types.sh
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/types/: apiTypes.ts  apiTypes.ts.example
scripts/: install_poetry.sh  run_project.sh
