[tool.poetry]
name = "mnist"
version = "0.1.0"
description = "mnist application backend"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "mnist", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pyright = "^1.1.330"

[tool.poetry.group.tools.dependencies]
pydantic2-to-typescript = {version = "^0.0.1", extras = ["cli"]}

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools<=66.1.1"]  # Force compatible setuptools
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
typeCheckingMode = "basic"
